# busybeaver

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BBTheorems.lean  Busybeaver.lean  LICENSE  Main.lean  README.md  TODO.md  Witness.lean  bb5_holdouts.md  bb5_holdouts.txt  config.json  lake-manifest.json  lakefile.lean  lakefile.toml  lean-toolchain
.builds/: typecheck.yml
.codex/environments/: environment.toml
.github/workflows/: blueprint.yml  ci.yml  explorer.yml
BBTheorems/: BB2.lean  BB3.lean  BB4.lean  BB5.lean  Common.lean
Busybeaver/: Basic.lean  ClosedSet.lean  Enumerate.lean  GFunction.lean  MinimalTape.lean  Parse.lean  Partial.lean  Pipeline.lean  Problem.lean  Reachability.lean  SpaceTimeDiagram.lean  TMEnumerate.lean  Transition.lean  TuringExt.lean  ZFunction.lean
Busybeaver/Deciders/: BB5Table.lean  BackwardsReasoning.lean  BoundExplore.lean  Cyclers.lean  FAR.lean  Loop1.lean  LooperDec.lean  NGramCPS.lean  NoHaltState.lean  RepWL.lean  (+3 more)
Witness/: Store.lean  Walk.lean
ci/: blueprint.sh  codex_lean_setup.sh  lean_mcp.sh  sorry_report.sh
docs/: README.md  bb5-proof-overview.md
explorer/: .gitignore  DESIGN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
explorer/api/: pyproject.toml
explorer/api/bb_api/: __init__.py  db.py  main.py  models.py  settings.py
explorer/api/tests/: test_api.py
explorer/ingest/: pyproject.toml
explorer/ingest/bb_ingest/: __init__.py  __main__.py  ingest.py  parse.py
explorer/ingest/tests/: test_roundtrip.py
proofs/: ngram-cps-closed-set-proof.md
scripts/: bench_witness.sh
(+98 files in other folders)
