[project]
name = "bb-api"
version = "0.0.0"
description = "Public read-only API over the Busy Beaver explorer database."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "asyncpg>=0.30",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bb_api"]
